css/custom.css
/* Building Intellect custom styles */

.logo-nav {
    width: 50px !important;
    height: 50px !important;
}

.logo-login {
    width: 200px !important;
    height: 200px !important;
}

/* edit-form page styles */
.selectBox select {
    width: 100%;
    font-weight: bold;
}

#notify-checkboxes {
    display: none;
    border: 1px #dadada solid;
    background-color: #ffffff;
}

#notify-checkboxes input {
    margin-left: 5px;
}

#notify-checkboxes label {
    display: block;
}

#notify-checkboxes label:hover {
    background-color: #1e90ff;
}

